bynkc/tests/fixtures/negative/356_embeds_ambiguous/input.bynk
commons demo.ea
type E = enum { X }
type S = | A(e: E) | B(e: E) embeds E as A, E as B
